fix: fix  JS bugs in section Contacts us

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
       </ul>
     </div>
   </footer>
-  <script src="./js/index.js"></script>
+  <script src="./js/contacts.js"></script>
   <script src="./js/adaptiveMenu.js"></script>
   <script src="./js/accordion.js"></script>
   <script src="./js/blur.js"></script>
